# WebService-UserRequests

./: .dockerignore  .gitignore  Dockerfile  README.md  default.env  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 549a23f087d2_initialization.py  9705a44c7ced_add_user_request.py
scripts/: run_tests.sh
src/: config.py  database.py  main.py  schemas.py
src/applications/: models.py  router.py  schemas.py  service.py  sevice.py
src/kafka/: producer.py
src/user_request/: models.py
src/utils/: database_paginations.py  database_types.py  logger.py
tests/: .tests.dockerignore  conftest.py  default.env
tests/applications/: test_create.py  test_endpoints.py  test_get.py  test_service.py
