[tool.poetry]
name = "webservice-userrequests"
version = "0.1.0"
description = ""
authors = ["Yevgeniy <kapustaevg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
paginate-sqlalchemy = "^0.3.1"
confluent-kafka = "^2.8.0"
aiokafka = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
